--- a/src/App.css
+++ b/src/App.css
@@ -367,7 +367,7 @@ ul {
 
 
 /* FAQ Page */
-.faq {
+/* .faq {
   padding: 50px 20px;
   background-color: #fff;
   max-width: 800px;
@@ -391,7 +391,7 @@ ul {
   background-color: #f1f1f1;
   border-radius: 10px;
   font-size: 18px;
-}
+} */
 
 /* Not Found Page */
 .not-found {
